# XCalForge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  gauss_arf_mod.py  pyproject.toml  run.slurm  setup.cfg  setupenv.sh  test.py
bootstrap/: install_SKELETON.sh  install_chpc.sh  setup_env_SKELETON.sh  setup_env_chpc.sh
dev/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
dev/.doctrees/: api.doctree  index.doctree  sg_execution_times.doctree
dev/_as_gen/: library.SKELETON.MyCustomLibrary.__init__.html  library.SKELETON.MyCustomLibrary.assign_mpi_load.html  library.SKELETON.MyCustomLibrary.build_synthetic_data.html  library.SKELETON.MyCustomLibrary.cleanup_parameter_iteration.html  library.SKELETON.MyCustomLibrary.cleanup_temperature_iteration.html  library.SKELETON.MyCustomLibrary.clear_tempdir.html  library.SKELETON.MyCustomLibrary.config.html  library.SKELETON.MyCustomLibrary.create_library.html  library.SKELETON.MyCustomLibrary.create_rank_output_file.html  library.SKELETON.MyCustomLibrary.fit_modified.html  library.SKELETON.MyCustomLibrary.fit_unmodified.html  library.SKELETON.MyCustomLibrary.generate_library.html  library.SKELETON.MyCustomLibrary.generate_model_modified.html  library.SKELETON.MyCustomLibrary.generate_model_unmodified.html  library.SKELETON.MyCustomLibrary.generate_modified_configuration.html  library.SKELETON.MyCustomLibrary.generate_unmodified_configuration.html  library.SKELETON.MyCustomLibrary.html  library.SKELETON.MyCustomLibrary.is_generated.html  library.SKELETON.MyCustomLibrary.library.html  library.SKELETON.MyCustomLibrary.parameters.html  library.SKELETON.MyCustomLibrary.set_logging_level.html  library.SKELETON.MyCustomLibrary.shape.html  library.SKELETON.MyCustomLibrary.size.html  library.SKELETON.MyCustomLibrary.tempdir.html  library.SKELETON.MyCustomLibrary.temperatures.html  library.SKELETON.MyCustomLibrary.write_output.html  library.SKELETON.html  library.arf_mod.GaussianARFLibrary.__init__.html  library.arf_mod.GaussianARFLibrary.assign_mpi_load.html  (+113 more)
dev/_modules/: index.html  (+1 more)
docs/: index.html
specforge/: __init__.py  utils.py
xforge/: __init__.py  _version.py  utils.py
xrmod/: libgen.py
(+352 files in other folders)
